--- a/src/main/resources/com/example/discordfx/DiscordServer.fxml
+++ b/src/main/resources/com/example/discordfx/DiscordServer.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.discordfx.DiscordServer">
    <children>
       <ImageView fx:id="serverImageProfile" fitHeight="159.0" fitWidth="214.0" layoutX="14.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true" />
@@ -17,6 +16,16 @@
          </font>
       </Text>
       <Button layoutX="702.0" layoutY="47.0" mnemonicParsing="false" onAction="#addMember" prefHeight="34.0" prefWidth="132.0" text="Add member">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button layoutX="702.0" layoutY="117.0" mnemonicParsing="false" onAction="#showMembers" prefHeight="34.0" prefWidth="132.0" text="Show members">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button layoutX="822.0" layoutY="659.0" mnemonicParsing="false" onAction="#backToMenu" prefHeight="26.0" prefWidth="64.0" text="Back">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
