--- a/src/main/resources/com/example/discordfx/DiscordServer.fxml
+++ b/src/main/resources/com/example/discordfx/DiscordServer.fxml
@@ -44,7 +44,7 @@
             <Font size="15.0" />
          </font>
       </Button>
-      <Text layoutX="258.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="383.2945861816406">
+      <Text fx:id="result" layoutX="258.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="383.2945861816406">
          <font>
             <Font size="20.0" />
          </font>
