--- a/src/main/resources/com/example/discordfx/DiscordServer.fxml
+++ b/src/main/resources/com/example/discordfx/DiscordServer.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.media.MediaView?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -50,6 +51,15 @@
          </font>
       </Text>
       <Button layoutX="702.0" layoutY="242.0" mnemonicParsing="false" onAction="#makeRole" prefHeight="34.0" prefWidth="132.0" text="Make role">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Button>
+      <MediaView fitHeight="200.0" fitWidth="200.0" layoutX="298.0" layoutY="466.0" />
+      <Button layoutX="702.0" layoutY="302.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="132.0" text="Play music">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
