add channel part 4

--- a/src/main/resources/com/example/discordfx/ChannelChat.fxml
+++ b/src/main/resources/com/example/discordfx/ChannelChat.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.discordfx.ChannelChat">
    <children>
-      <TextArea fx:id="messages" layoutX="7.0" layoutY="3.0" prefHeight="523.0" prefWidth="887.0" />
+      <TextArea fx:id="messages" editable="false" layoutX="7.0" layoutY="3.0" prefHeight="523.0" prefWidth="887.0" wrapText="true" />
       <Button layoutX="7.0" layoutY="538.0" mnemonicParsing="false" onAction="#sendFile" prefHeight="36.0" prefWidth="155.0" text="File">
          <font>
             <Font size="16.0" />
@@ -75,7 +75,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Button layoutX="195.0" layoutY="586.0" mnemonicParsing="false" onAction="#recordeVoice" prefHeight="36.0" prefWidth="155.0" text="Pin">
+      <Button layoutX="195.0" layoutY="586.0" mnemonicParsing="false" onAction="#pinMessage" prefHeight="36.0" prefWidth="155.0" text="Pin">
          <font>
             <Font size="16.0" />
          </font>
@@ -83,7 +83,20 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Button layoutX="380.0" layoutY="586.0" mnemonicParsing="false" onAction="#recordeVoice" prefHeight="36.0" prefWidth="155.0" text="Get pin">
+      <Button layoutX="372.0" layoutY="586.0" mnemonicParsing="false" onAction="#getPinnedMessage" prefHeight="36.0" prefWidth="155.0" text="Get pin">
+         <font>
+            <Font size="16.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <TextField fx:id="pinMessageNumber" alignment="CENTER" layoutX="546.0" layoutY="585.0" prefHeight="37.0" prefWidth="186.0" promptText="Message number" visible="false">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </TextField>
+      <Button fx:id="submitPinMessage" layoutX="738.0" layoutY="586.0" mnemonicParsing="false" onAction="#submitPinMessage" prefHeight="36.0" prefWidth="155.0" text="OK" visible="false">
          <font>
             <Font size="16.0" />
          </font>
