--- a/src/main/resources/com/example/discordfx/MakeChannelChat.fxml
+++ b/src/main/resources/com/example/discordfx/MakeChannelChat.fxml
@@ -7,10 +7,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.discordfx.MakeChannelChat">
    <children>
-      <Text fx:id="result" layoutX="193.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="514.7392578125">
+      <Text fx:id="result" layoutX="193.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="514.7392578125">
          <font>
             <Font size="21.0" />
          </font>
