--- a/src/main/resources/com/example/discordfx/SetStatus.fxml
+++ b/src/main/resources/com/example/discordfx/SetStatus.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.image.*?>
+<?import java.net.URL?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import java.net.URL?>
 
 <AnchorPane fx:id="background" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.discordfx.SetStatus">
    <stylesheets>
@@ -20,65 +21,37 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="invisible" layoutX="232.0" layoutY="378.0" mnemonicParsing="false" onAction="#Invisible" prefHeight="50.0" prefWidth="291.0" text="Invisible" textAlignment="RIGHT">
+            <Button fx:id="invisible" layoutX="232.0" layoutY="408.0" mnemonicParsing="false" onAction="#Invisible" prefHeight="50.0" prefWidth="262.0" text="Invisible" textAlignment="RIGHT">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
-               <graphic>
-                  <ImageView fx:id="invisibleIcon" fitHeight="50.0" fitWidth="50.0">
-                     <image>
-                        <Image url="StatusImages/invisible.jpg" />
-                     </image>
-                  </ImageView>
-               </graphic>
             </Button>
-            <Button fx:id="Do_Not_Ddistrub" layoutX="232.0" layoutY="298.0" mnemonicParsing="false" onAction="#Do_Not_Disturb" prefHeight="50.0" prefWidth="50.0" text="Do Not Disturb" textAlignment="RIGHT">
+            <Button fx:id="Do_Not_Ddistrub" layoutX="232.0" layoutY="334.0" mnemonicParsing="false" onAction="#Do_Not_Disturb" prefHeight="50.0" prefWidth="262.0" text="Do Not Disturb" textAlignment="RIGHT">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
-               <graphic>
-                  <ImageView fx:id="doNotDisturbImage">
-                     <image>
-                        <Image url="StatusImages/DoNotDistrub.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
             </Button>
-            <Button fx:id="idle" layoutX="232.0" layoutY="224.0" mnemonicParsing="false" onAction="#Idle" prefHeight="50.0" prefWidth="50.0" text="Idle" textAlignment="RIGHT">
+            <Button fx:id="idle" layoutX="232.0" layoutY="258.0" mnemonicParsing="false" onAction="#Idle" prefHeight="50.0" prefWidth="262.0" text="Idle" textAlignment="RIGHT">
                <cursor>
                   <Cursor fx:constant="HAND" />
-               </cursor>
-               <graphic>
-                  <ImageView fx:id="idleImage" fitHeight="50.0" fitWidth="50.0">
-                     <image>
-                        <Image url="StatusImages/Idle.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
+               </cursor>-->
             </Button>
-            <Button fx:id="online" layoutX="232.0" layoutY="144.0" mnemonicParsing="false" onAction="#Online" prefHeight="50.0" prefWidth="291.0" text="Online" textAlignment="RIGHT">
+            <Button fx:id="online" layoutX="232.0" layoutY="183.0" mnemonicParsing="false" onAction="#Online" prefHeight="50.0" prefWidth="262.0" text="Online" textAlignment="CENTER">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
-               <graphic>
-                  <ImageView fx:id="OnlineImage">
-                     <image>
-                        <Image url="StatusImages/Online.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
             </Button>
             <Label fx:id="iconContainer" layoutX="247.0" layoutY="-105.0">
                <graphic>
                   <ImageView fx:id="icon" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
                </graphic>
             </Label>
+            <Text fx:id="text" layoutX="92.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="541.1392211914062">
+               <font>
+                  <Font size="21.0" />
+               </font>
+            </Text>
          </children>
       </AnchorPane>
-      <Text fx:id="text" layoutX="113.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="673.1392211914062">
-         <font>
-            <Font size="21.0" />
-         </font>
-      </Text>
    </children>
 </AnchorPane>
